# SenseHATPnP

./: LICENSE  README.md  SenseHat.interface.json  SenseHatModel.capabilitymodel.json
python_scripts/: get_humidity.py  get_pressure.py  show_message.py
sensehat_app/: CMakeLists.txt  Readme.md  SenseHatModel_impl.c  SenseHatModel_impl.h  main.c  pnp_device.c  pnp_device.h
sensehat_app/utilities/: deviceinfo_interface.c  deviceinfo_interface.h  digitaltwin_client_helper.c  digitaltwin_client_helper.h  digitaltwin_serializer.c  digitaltwin_serializer.h  sensehat_interface.c  sensehat_interface.h
